Alignment fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -291,3 +291,7 @@ h1 {
 .guest:active {
   transform: scale(0.95);
 }
+
+.vh-90 {
+  height: 90vh;
+}
